archive/networking/traefik/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    hajimari.io/appName: "traefik"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-rfc1918@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "traefik.microserver.space"
      secretName: "microserver-space-tls"
  rules:
    - host: "traefik.microserver.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
